--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ MANIFEST
 *.js
 *.php
 *.sql
-
+*.bat
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -145,7 +145,7 @@ celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
-
+*.bat
 # Environments
 .env
 .envrc
