--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,9 @@ MANIFEST
 *.manifest
 *.spec
 
+# Installer output
+installer_output/
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
