Restructure project with frontend/backend separation
Reorganize codebase into professional folder structure separating
frontend (GUI), backend (database), utils, assets, and scripts.
Update all imports and add proper package structure.

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,4 @@
 # Build dependencies:
 pyinstaller>=5.0.0        # For creating .exe files
 reportlab>=4.0.0          # For PDF generation (reports/printouts)
+Pillow>=10.0.0            # For image handling (logo display)
