Add Flask API and web frontend - Complete online mode implementation
- Added Flask REST API (backend/api.py) with all endpoints
- Created web frontend with HTML/JavaScript
- Implemented all modules: Patients, Doctors, Appointments, Prescriptions, Billing
- Fixed SQLite threading issue for Flask multi-threading
- Updated .gitignore to include web folder files
- Added comprehensive documentation in docs/ folder
- Both desktop (offline) and web (online) modes now fully functional
- Same database shared between both modes

--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,14 @@ MANIFEST
 *.xml
 *.yaml
 *.yml
+# Ignore HTML/CSS/JS files but allow web folder
 *.html
 *.css
 *.js
+!web/
+!web/**/*.html
+!web/**/*.js
+!web/**/*.css
 *.php
 *.sql
 *.bat
