Update .gitignore to include web folder and documentation files

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,10 @@ __pycache__/
 
 # C extensions
 *.so
+# Ignore markdown files except important ones
 *.md
+!README.md
+!docs/**/*.md
 *.db
 # Distribution / packaging
 .Python
