--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,6 @@ tkcalendar>=1.6.1         # For calendar date picker widgets in reports
 # Flask API dependencies (for web mode):
 flask>=2.0.0              # Flask web framework
 flask-cors>=3.0.0         # CORS support for Flask API
+
+# Production server (for deploy e.g. Render):
+gunicorn>=21.0.0          # WSGI server for Render/Heroku
