Add Google Cloud Storage backup functionality
- Updated requirements.txt to include google-cloud-storage for backup and restore capabilities.
- Enhanced api.py with new endpoints for checking GCS status, uploading backups, listing backups, and restoring from backups.
- Implemented backup and restore methods in database.py to facilitate local backup creation and restoration from backup files.
- Integrated backup module in frontend for admin access to backup and restore features.

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,6 @@ flask-cors>=3.0.0         # CORS support for Flask API
 
 # Production server (for deploy e.g. Render):
 gunicorn>=21.0.0          # WSGI server for Render/Heroku
+
+# Optional - Google Cloud Storage backup:
+google-cloud-storage>=2.0.0   # For cloud database backup/restore
